// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicTable no border around table element 1`] = `
.c0 {
  border: 1px solid rgba(34,36,38,0.15);
  border-radius: 0.28571429rem;
  border-collapse: separate;
  border-spacing: 0;
  border: none;
}

.c0 td {
  padding: 0.4em 0.8em;
}

.c0 td:not(:first-child) {
  border-left: 1px solid rgba(34,36,38,0.15);
}

.c0 tr:not(:first-child) td {
  border-top: 1px solid rgba(34,36,38,0.15);
}

<div>
  <table
    class="c0"
  >
    <caption>
      Basic Table
    </caption>
    <tbody>
      <tr
        class=""
      >
        <td
          class=""
        >
          One col
        </td>
        <td
          class=""
        >
          Two col
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DefaultTable gets rendered with border around table 1`] = `
.c0 {
  border: 1px solid rgba(34,36,38,0.15);
  border-radius: 0.28571429rem;
  border-collapse: separate;
  border-spacing: 0;
}

.c0 td {
  padding: 0.4em 0.8em;
}

.c0 td:not(:first-child) {
  border-left: 1px solid rgba(34,36,38,0.15);
}

.c0 tr:not(:first-child) td {
  border-top: 1px solid rgba(34,36,38,0.15);
}

<div>
  <table
    class="c0"
  >
    <caption>
      Default Table
    </caption>
    <tbody
      class=""
    >
      <tr
        class=""
      >
        <td
          class=""
        >
          One col
        </td>
        <td
          class=""
        >
          Two col
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`StripedTable alternates background color on rows 1`] = `
.c0 {
  border: 1px solid rgba(34,36,38,0.15);
  border-radius: 0.28571429rem;
  border-collapse: separate;
  border-spacing: 0;
  border: none;
}

.c0 td {
  padding: 0.4em 0.8em;
}

.c0 td:not(:first-child) {
  border-left: 1px solid rgba(34,36,38,0.15);
}

.c0 tr:not(:first-child) td {
  border-top: 1px solid rgba(34,36,38,0.15);
}

.c0 tr:nth-child(even) {
  background: #f9fafb;
}

<div>
  <table
    class="c0"
  >
    <caption>
      Basic Table
    </caption>
    <tbody>
      <tr
        class=""
      >
        <td
          class=""
        >
          One col
        </td>
        <td
          class=""
        >
          Two col
        </td>
      </tr>
      <tr
        class=""
      >
        <td
          class=""
        >
          One col
        </td>
        <td
          class=""
        >
          Two col
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
